# croco

./: .env.example  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  PLAN.md  README.md  RECOMMENDATIONS.md  SECURITY.md  dependabot.yaml  euroeval_benchmark_results.jsonl.bak  full_eval_queue.log.bak  llama_rm_queue.sh  makefile  pyproject.toml  reeval_3iter.log.bak  resume_tuned_simpo.sh  simpo_tuned_eval.log.bak
.github/workflows/: ci.yaml
config/: danish-apertus-generated.yaml  danish-apertus-gold.yaml  danish-apertus-grpo.yaml  danish-apertus-llama-rm.yaml  danish-apertus-ls.yaml  danish-apertus-simpo-full-50k.yaml  danish-apertus-simpo-full.yaml  danish-apertus-simpo-tuned-smoke.yaml  danish-apertus-simpo-tuned.yaml  danish-apertus-simpo.yaml  danish-apertus.yaml  danish-baseline.yaml  danish-micro-ablation.yaml  danish-micro-apertus.yaml  danish-micro-grpo.yaml  danish-micro-simpo.yaml  danish-pilot-gemma4.yaml  danish-pilot-munin.yaml  danish-pilot-qwen.yaml  danish-pilot.yaml  danish-test.yaml  danish.yaml
docs/: 01-main-croco.md  01-max-reward.md  02-gold-chosen.md  03-generated.md  04-llama-rm.md  05-label-smoothing.md  05-length-normalised.md  06-simpo.md  07-simpo-tuned.md  08-simpo-full.md  09-grpo.md  10-simpo-full-50k.md  README.md  REFERENCES.md
src/croco/: __init__.py  config.py  data.py  data_models.py  dataset.py  dpo.py  engines.py  eval_subprocess.py  evaluation.py  grpo.py  lora.py  pipeline.py  preference.py  trl_dpo_fix.py  utils.py  vllm_generation.py  vllm_scoring.py
src/scripts/: auto_launch_grpo.sh  auto_launch_llama_rm.sh  auto_launch_sfull.sh  build_dashboard.py  build_dataset.py  compare_evals.py  eval_checkpoints.py  eval_model.py  fix_dot_env_file.py  full_eval_queue.sh  grpo_queue.sh  llama_rm_queue.sh  monitor_training.py  reeval_3iter_checkpoints.sh  reeval_3iter_queue.sh  reeval_sfull_grpo_queue.sh  rescore_candidates.py  resume_ls_simpo.sh  resume_tuned_simpo.sh  run_chain.sh  run_pipeline.py  run_simpo_extra.sh  simpo_full_queue.sh  simpo_tuned_queue.sh  train.py  train_grpo.py  update_docs.sh  watch_dashboard.sh
tests/: __init__.py  conftest.py  test_cache_bug_fix.py  test_config.py  test_conftest.py  test_dashboard.py  test_data.py  test_data_models.py  test_dataset.py  test_dpo.py  test_eval_checkpoints.py  test_evaluation.py  test_grpo.py  test_pipeline.py  test_preference.py  test_rescore_candidates.py
